--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MobileFLM</string>
+    <string name="app_name">PRONEX TB-HIV</string>
     <string name="hello">Hello World!!!!</string>
     <string name="sub">Submit</string>
     <string name="card">CArdView</string>
@@ -16,6 +16,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="login">Login</string>
+    <string name="senha">Senha</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_user_list">Users</string>
