Ver: Auth + Opcoes-Final + Hora Medicamento

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,14 +11,11 @@
     <string name="getpacientes"> Buscar Pacientes</string>
     <string name="tratamento_complement"> º dia de tratamento </string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="horario">Escolha o Horário</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="login">Login</string>
     <string name="senha">Senha</string>
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_user_list">Users</string>
     <string name="title_user_detail">User Detail</string>
 </resources>
