Ver 1.0: Auth + Opcoes-Final2 + Hora Medicamento + Camera2 + Medicacao + Sentimento+ info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="s_14_vermelho">Suor ou urina vermelhas</string>
     <string name="s_15_Tristeza"> Tristeza  grande</string>
     <string name="s_16_dormir"> Só quero ficar dormindo</string>
-    <string name="title_activity_info">ScrollingActivity</string>
+    <string name="title_activity_info">Inormações</string>
     <string name="tb_info_text">
         "INFORMAÇÕES SOBRE A TURBERCULOSE.\n\n"
 
